<resources>
    <string name="app_name">HoangQuocAnh</string>
    <string name="login">LOGIN</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="new_here_register">New here? REGISTER</string>
    <string name="register">Register</string>
    <string name="already_have_an_account_login">Already have an account? LOGIN</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone number</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="change_theme">CHANGE THEME</string>
    <string name="home">HOME</string>
    <string name="library">LIBRARY</string>
    <string name="playlist">PLAYLIST</string>
    <string name="now_playing">NOW PLAYING</string>
    <string name="grainy_days">Grainy days</string>
    <string name="moody">Moody</string>
    <string name="artist_name">Artist name</string>
    <string name="song_name">Song name</string>
    <string name="local">LOCAL</string>
    <string name="remote">REMOTE</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="share">Share</string>
    <string name="choose_playlist">Choose playlist</string>
    <string name="remove_from_playlist">Remove from playlist</string>
    <string name="my_playlist">My playlist</string>
    <string name="new_playlist">New playlist</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="sorting">Sorting</string>
    <string name="login_your_account">Login your account</string>
    <string name="welcome_back">Welcome back,</string>
    <string name="log_out">Log out</string>
    <string name="create">Create</string>
    <string name="profile">Profile</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="title">Title</string>
</resources>