<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/confirm_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="16dp"
        android:src="@drawable/ic_v"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/profile_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/back_button"
        app:layout_constraintStart_toEndOf="@+id/back_button"
        app:layout_constraintTop_toTopOf="@id/back_button" />

    <ImageView
        android:id="@+id/profile_pic"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="64dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_default_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/change_avatar_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:src="@drawable/ic_change_avatar"
        app:layout_constraintBottom_toBottomOf="@id/profile_pic"
        app:layout_constraintEnd_toEndOf="@id/profile_pic"
        app:layout_constraintStart_toStartOf="@id/profile_pic"
        app:layout_constraintTop_toTopOf="@id/profile_pic" />

    <EditText
        android:id="@+id/name_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/bg_item_menu"
        android:drawablePadding="16dp"
        android:padding="16dp"
        android:textSize="18sp"
        app:drawableLeftCompat="@drawable/ic_name"
        app:layout_constraintTop_toBottomOf="@id/profile_pic" />

    <EditText
        android:id="@+id/email_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_item_menu"
        android:drawablePadding="16dp"
        android:padding="16dp"
        android:textSize="18sp"
        app:drawableLeftCompat="@drawable/ic_email"
        app:layout_constraintTop_toBottomOf="@id/name_box" />

    <EditText
        android:id="@+id/old_password_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/bg_item_menu"
        android:drawablePadding="16dp"
        android:hint="@string/old_password"
        android:padding="16dp"
        android:textSize="18sp"
        android:visibility="gone"
        app:drawableLeftCompat="@drawable/ic_password"
        app:layout_constraintTop_toBottomOf="@id/profile_pic"  />

    <EditText
        android:id="@+id/new_password_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_item_menu"
        android:drawablePadding="16dp"
        android:hint="@string/new_password"
        android:padding="16dp"
        android:textSize="18sp"
        android:visibility="gone"
        app:drawableLeftCompat="@drawable/ic_email"
        app:layout_constraintTop_toBottomOf="@id/old_password_box" />

    <EditText
        android:id="@+id/confirm_password_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_item_menu"
        android:drawablePadding="16dp"
        android:hint="@string/confirm_password"
        android:padding="16dp"
        android:textSize="18sp"
        android:visibility="gone"
        app:drawableLeftCompat="@drawable/ic_password"
        app:layout_constraintTop_toBottomOf="@id/new_password_box" />

    <ImageView
        android:id="@+id/change_password_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:padding="8dp"
        android:src="@drawable/ic_change_password"
        app:layout_constraintBottom_toTopOf="@+id/logout_button"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/logout_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:src="@drawable/ic_logout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>